added scalar ui for api docs
