# docs/swagger.json
@@ -6,8 +6,9 @@
         "contact": {},
         "version": "1.0"
     },
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/signup": {
+        "/api/v1/auth/sign-up/password": {
             "post": {
                 "description": "Create asd new user",
                 "consumes": [
@@ -116,6 +117,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
